# AELocalizer

./: LanguageCodeDetector.py  LocalizationController.py  Visualization.py  WordTableExtractor.py  XMLTextReplacer.py  pyproject.toml  requirements.txt
example/: 6001-263.xml  Video_OST_DE.docx  Video_OST_forTRA_ES.docx
example/AE_Script/: Text_To_XML.jsx
ready_XML_for_AE/: 6001-263_DE.xml  6001-263_ES.xml
translationMemory/: Video_OST_DE.json  Video_OST_forTRA_ES.json
